# analyse_systemes_educatifs

./: .gitignore  README.md  pyproject.toml
notebooks/: Analysez des données de systèmes éducatifs.ipynb
