[project]
name = "analyse-systemes-educatifs"
version = "0.1.0"
description = ""
authors = [
    {name = "Nassanalytics",email = "nassim.naoui@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)"
]

[tool.poetry]
packages = [{include = "analyse_systemes_educatifs", from = "src"}]


[tool.poetry.group.dev.dependencies]
notebook = "^7.4.5"
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
